@@ -29,6 +29,8 @@ import java.util.Optional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import static com.google.common.base.Preconditions.checkArgument;
+
 public class MathUtils {
     private static final Logger log = LoggerFactory.getLogger(MathUtils.class);
 
@@ -70,7 +72,7 @@ public class MathUtils {
     }
 
     public static long doubleToLong(double value) {
-        return new Double(value).longValue();
+        return Double.valueOf(value).longValue();
     }
 
     public static double scaleUpByPowerOf10(double value, int exponent) {
@@ -113,10 +115,10 @@ public class MathUtils {
     }
 
     public static class MovingAverage {
-        Deque<Long> window;
-        private int size;
+        final Deque<Long> window;
+        private final int size;
         private long sum;
-        private double outlier;
+        private final double outlier;
 
         // Outlier as ratio
         public MovingAverage(int size, double outlier) {
@@ -127,24 +129,30 @@ public class MathUtils {
         }
 
         public Optional<Double> next(long val) {
-            var fullAtStart = isFull();
-            if (fullAtStart) {
-                if (outlier > 0) {
-                    // Return early if it's an outlier
-                    var avg = (double) sum / size;
-                    if (Math.abs(avg - val) / avg > outlier) {
-                        return Optional.empty();
+            try {
+                var fullAtStart = isFull();
+                if (fullAtStart) {
+                    if (outlier > 0) {
+                        // Return early if it's an outlier
+                        checkArgument(size != 0);
+                        var avg = (double) sum / size;
+                        if (Math.abs(avg - val) / avg > outlier) {
+                            return Optional.empty();
+                        }
                     }
+                    sum -= window.remove();
                 }
-                sum -= window.remove();
+                window.add(val);
+                sum += val;
+                if (!fullAtStart && isFull() && outlier != 0) {
+                    removeInitialOutlier();
+                }
+                // When discarding outliers, the first n non discarded elements return Optional.empty()
+                return outlier > 0 && !isFull() ? Optional.empty() : current();
+            } catch (Throwable t) {
+                log.error(t.toString());
+                return Optional.empty();
             }
-            window.add(val);
-            sum += val;
-            if (!fullAtStart && isFull() && outlier != 0) {
-                removeInitialOutlier();
-            }
-            // When discarding outliers, the first n non discarded elements return Optional.empty()
-            return outlier > 0 && !isFull() ? Optional.empty() : current();
         }
 
         boolean isFull() {
@@ -155,7 +163,9 @@ public class MathUtils {
             var element = window.iterator();
             while (element.hasNext()) {
                 var val = element.next();
-                var avgExVal = (double) (sum - val) / (size - 1);
+                int div = size - 1;
+                checkArgument(div != 0);
+                var avgExVal = (double) (sum - val) / div;
                 if (Math.abs(avgExVal - val) / avgExVal > outlier) {
                     element.remove();
                     break;
